# STOK

./: .gitignore  CITATION.cff  Containment.txt  Equatorial_ports.txt  LICENCE  Limbs.txt  Limiter.txt  README.md  Solenoid.txt  build.py  pyproject.toml  stok_config.txt  stok_modules.py  stok_reloaded.py  test.py
docs/source/: conf.py  index.rst
inp_and_geometry/: materials.inp  stok.i  stok.i.mvol  stok.i.seed  stok.i_det0.m  stok.i_res.m  stok.i_vol.m
inp_and_geometry/dotis_torun/: NEWremade.i
inp_and_geometry/steps/: bbox.step  containment1.step  containment2.step  containment3.step  containment4.step  containment5.step  containment6.step  containment7.step  containment8.step  limb.step  plasma.step  solenoid.step  sphere0.step  sphere1.step  sphere10.step  sphere11.step  sphere12.step  sphere13.step  sphere14.step  sphere15.step  sphere2.step  sphere3.step  sphere4.step  sphere5.step  sphere6.step  sphere7.step  sphere8.step  sphere9.step
inp_and_geometry/stls/: bbox.stl  containment1.stl  containment2.stl  containment3.stl  containment4.stl  containment5.stl  containment6.stl  containment7.stl  containment8.stl  limb.stl  plasma.stl  solenoid.stl  sphere0.stl  sphere1.stl  sphere10.stl  sphere11.stl  sphere12.stl  sphere13.stl  sphere14.stl  sphere15.stl  sphere2.stl  sphere3.stl  sphere4.stl  sphere5.stl  sphere6.stl  sphere7.stl  sphere8.stl  sphere9.stl
src/stok/: __init__.py  stok_modules.py
stok/: stok_modules.py
